# seeed

./: .justfile  Cargo.toml  README.md  TODO.md
assets/: real001.seeed  sample1.seeed
src/: built_in_functions.rs  console.rs  error.rs  lib.rs  main.rs  parser.rs  script.rs  sshclient.rs
tests/: execution_tests.rs  parser_tests.rs  target_tests.rs
