[package]
name = "seeed"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.2.0"
thiserror = "2.0.7"
ssh2 = "0.9.4"
uuid = { version = "1.11.0", features = ["v4"] }
regex = "1.11.1"
minijinja = "2.5.0"
env-file-reader = "0.3.0"
pom = "3.4.0"
serde = { version = "1.0.216", features = ["derive"] }
